--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -97,6 +97,9 @@ afsapi==0.2.7
 # homeassistant.components.agent_dvr
 agent-py==0.0.23
 
+# homeassistant.components.aicooking
+aicooking-ble==0.1.1
+
 # homeassistant.components.geo_json_events
 aio_geojson_generic_client==0.1
 
