--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -84,6 +84,9 @@ advantage_air==0.4.1
 # homeassistant.components.agent_dvr
 agent-py==0.0.23
 
+# homeassistant.components.aicooking
+aicooking-ble==0.1.1
+
 # homeassistant.components.geo_json_events
 aio_geojson_generic_client==0.1
 
